--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,16 @@
 # Setup the Python environment and copy the built frontend files
-FROM python:3.9-slim
+FROM python:3.12-slim
 WORKDIR /app
 
 # Install Python dependencies
-COPY requirements.txt .
+COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy the Flask application
-COPY api /app
-COPY models /app
+COPY . /app
 
 # Expose the port Flask is accessible on
 EXPOSE 5000
 
-# Set environment variables
-ENV GUNICORN_CMD_ARGS="--bind=0.0.0.0:5000 --workers=4 app:app"
-
 # Run Gunicorn to serve Flask application
-CMD ["gunicorn", "app:app"]
+CMD ["python3", "-m", "api.v1.app"]
