--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,12 @@
 pymongo[srv]
 Flask-PyMongo>=2.3.0
-Flask==1.1.2
 Flask-Cors==3.0.8
-Jinja2==2.11.2
 requests==2.18.4
 pycodestyle==2.6.0
+flask-restx
+gunicorn==22.0.0
+Flask==1.1.4
+Jinja2==2.11.3
+Werkzeug==1.0.1
+MarkupSafe==1.1.1
+bcrypt
